--- a/energy_consumption_solution.ipynb
+++ b/energy_consumption_solution.ipynb
@@ -228,10 +228,6 @@
         "\n",
         "Follow the steps below to create an equivalent Sankey for a different country.\n",
         "\n",
-        "  1. Find and download the IEA World Energy Balances Highlights spreadsheet, from the webpage: https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open it up and navigate to the `TimeSeries_1971-2022` sheet. Save this sheet as a .csv file which is much easier to read into most programmes than an Excel file. Then upload it to Colab using the `upload` button in the left panel or by simply dragging and dropping.\n",
-        "\n",
-        "  2. In the next cell import the sheet to a pandas DataFrame. To find appropriate functions for the next steps either have a look at the [pandas documentation](https://pandas.pydata.org/docs/reference/index.html), or remember [your best friend](https://www.google.com/) when writing code.\n",
-        "\n",
         "\n"
       ],
       "metadata": {
@@ -241,9 +237,35 @@
     {
       "cell_type": "code",
       "source": [
+        "# @markdown   1. Download the IEA World Energy Balances spreadsheet, by running this cell. Further information is available at https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open the file up on your computer and navigate to the `TimeSeries_1971-2022` sheet. Save this sheet as a .csv file which is much easier to read into most programmes than an Excel file. Then upload it to Colab using the `upload` button in the left panel or by simply dragging and dropping.\n",
+        "%%capture\n",
+        "file_id = '1FN-0xkVHiM2V75RTgl-Aq7l862mgWdAh'\n",
+        "download_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
+        "!wget -O WorldEnergyBalances.xlsx $download_url\n",
+        "files.download('WorldEnergyBalances.xlsx')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "RRlqnB3MaZgg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "  2. In the next cell import the sheet to a pandas DataFrame. To find appropriate functions for the next steps either have a look at the [pandas documentation](https://pandas.pydata.org/docs/reference/index.html), or remember [your best friend](https://www.google.com/) when writing code."
+      ],
+      "metadata": {
+        "id": "vrKiJ8Decv9s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\"\"\"Read in an Excel file\"\"\"\n",
         "import pandas as pd\n",
-        "fileName = 'WorldEnergyBalancesHighlights2023.csv'\n",
+        "fileName = 'WorldEnergyBalances.csv'\n",
         "data = pd.read_csv(fileName, skiprows=1)"
       ],
       "metadata": {
@@ -756,7 +778,7 @@
       "cell_type": "code",
       "source": [
         "# Define variables\n",
-        "fileName = 'WorldEnergyBalancesHighlights2023.csv'\n",
+        "fileName = 'WorldEnergyBalances.csv'\n",
         "country = 'France'\n",
         "year = '2021'\n",
         "\n",
