--- a/energy_consumption.ipynb
+++ b/energy_consumption.ipynb
@@ -242,7 +242,7 @@
       "source": [
         "\"\"\"Read in an Excel file\"\"\"\n",
         "import pandas as pd\n",
-        "fileName = 'WorldEnergyBalancesHighlights2023.csv'\n",
+        "fileName = 'WorldEnergyBalances.csv'\n",
         "data = ##Complete here##"
       ],
       "metadata": {
@@ -622,7 +622,7 @@
       "cell_type": "code",
       "source": [
         "# Define variables\n",
-        "fileName = 'WorldEnergyBalancesHighlights2023.csv'\n",
+        "fileName = 'WorldEnergyBalances.csv'\n",
         "country = 'France'\n",
         "year = '2021'\n",
         "\n",
