WEB download update

--- a/energy_consumption.ipynb
+++ b/energy_consumption.ipynb
@@ -226,10 +226,32 @@
       "source": [
         "## Task 2 - Create your own\n",
         "\n",
-        "Follow the steps below to create an equivalent Sankey for a different country.\n",
-        "\n",
-        "  1. Find and download the IEA World Energy Balances Highlights spreadsheet, from the webpage: https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open it up and navigate to the `TimeSeries_1971-2022` sheet. Save this sheet as a .csv file which is much easier to read into most programmes than an Excel file. Then upload it to Colab using the `upload` button in the left panel or by simply dragging and dropping.\n",
-        "\n",
+        "Follow the steps below to create an equivalent Sankey for a different country."
+      ],
+      "metadata": {
+        "id": "1htzPV_JfNjr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @markdown   1. Download the IEA World Energy Balances spreadsheet, by running this cell. Further information is available at https://www.iea.org/data-and-statistics/data-product/world-energy-statistics-and-balances. Open the file up on your computer and navigate to the `TimeSeries_1971-2022` sheet. Save this sheet as a .csv file which is much easier to read into most programmes than an Excel file. Then upload it to Colab using the `upload` button in the left panel or by simply dragging and dropping.\n",
+        "%%capture\n",
+        "file_id = '1FN-0xkVHiM2V75RTgl-Aq7l862mgWdAh'\n",
+        "download_url = f\"https://drive.google.com/uc?id={file_id}\"\n",
+        "!wget -O WorldEnergyBalances.xlsx $download_url\n",
+        "files.download('WorldEnergyBalances.xlsx')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "93L9NGS_fEiZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "  2. In the next cell import the sheet to a pandas DataFrame. To find appropriate functions for the next steps either have a look at the [pandas documentation](https://pandas.pydata.org/docs/reference/index.html), or remember [your best friend](https://www.google.com/) when writing code.\n",
         "\n"
       ],
